# claude-rag-toolkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  PLANNING.md  QUICK_REFERENCE.md  README.md  TASK.md  USAGE_INSTRUCTIONS.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.claude-rag/: config.json
.github/workflows/: test.yml
docs/: configuration.md  installation.md
sessions/: .gitkeep  index.json
src/: __init__.py  cli.py
src/config/: __init__.py
src/core/: __init__.py  knowledge_extractor.py  rag_engine.py
src/integrations/: __init__.py  cli_interface.py  mcp_server.py  mcp_server_enhanced.py
src/utils/: README.md  __init__.py  embedding_provider.py  repo_detector.py  session_manager.py
templates/: README_MCP.md  gitignore_template  mcp_config.json  migrate_from_old_rag.sh  project_setup.sh
tests/: __init__.py  conftest.py
tests/fixtures/: README.md  sample_docs.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/core/: test_knowledge_extractor.py  test_rag_engine_simple.py
tests/unit/integrations/: __init__.py  test_mcp_server.py
tests/unit/utils/: test_repo_detector.py  test_session_manager.py
