[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-rag-toolkit"
version = "1.0.0"
description = "Multi-repository documentation management system for Claude Code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude RAG Toolkit Team", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]
keywords = [
    "claude", "documentation", "rag", "search", "knowledge-management",
    "multi-repository", "mlops", "machine-learning", "ansible", "kubernetes"
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/yourusername/claude-rag-toolkit"
"Bug Reports" = "https://github.com/yourusername/claude-rag-toolkit/issues"
"Source" = "https://github.com/yourusername/claude-rag-toolkit"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0", "orjson>=3.9.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=22.0.0", "flake8>=4.0.0", "mypy>=0.950"]
docs = ["mkdocs>=1.4.0", "mkdocs-material>=8.0.0"]

[project.scripts]
claude-rag = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true